# re4ctor-core

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PROOF.md  README.md  SECURITY.md  re4_release.sha256  re4_release.tar.gz.asc
.github/workflows/: build-matrix.yml  build.yml  release.yml  tests.yml
cmake/: re4ctor_coreConfig.cmake.in
docs/: USAGE.md  design.md  re4ctor-api.service.example
include/: re4ctor_core.h
include/re4/: drbg.h  entropy.h
proof/: README.md  bigcrush_summary.txt  dieharder_summary.txt  practrand_summary.txt
release/: SBOM.spdx.json
scripts/: run_bigcrush.sh  run_dieharder.sh  run_practrand.sh
src/core/: re4_dump.c  re4ctor_core.c  re4ctor_core.h
src/drbg/: drbg.c
src/entropy/: entropy.c
src/health/: health.c  health.h
src/sp800_90b/: estimator.c  estimator.h
tests/: basic.c  bigcrush_stdin  bigcrush_stdin.c
tests/testu01/: bigcrush_stdin.c
